# mm-game

./: .gitignore  README.md  bench_llm.py  mm.py  pyproject.toml  voice_input.py
android/: README.md  fetch-vosk-model.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/alanxw/marketmaking/: ContractClient.kt  LlmFallback.kt  MainActivity.kt  MicTest.kt  QuoteParser.kt  SettingsStore.kt  Sim.kt  SimViewModel.kt  Speech.kt  VoiceInput.kt  VoskRecognizer.kt
android/app/src/main/res/values/: strings.xml  themes.xml
python/: README.md  mm.py  pyproject.toml  quote_parser.py  tts.py  voice_input.py
server/: Cargo.toml  README.md  populate.py  pyproject.toml
server/src/: main.rs
