[project]
name = "market-making"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "piper-tts>=1.4.2",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
]
