[project]
name = "mm-client"
version = "0.1.0"
description = "Market-making practice terminal client"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "piper-tts>=1.4.2",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
]

[project.scripts]
mm-client = "mm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mm.py", "voice_input.py", "quote_parser.py", "tts.py"]
sources = ["."]
